--- a/app/templates/manager/list.html
+++ b/app/templates/manager/list.html
@@ -1,44 +1,13 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.108.0">
-    <title>Offcanvas navbar template · Bootstrap v5.3</title>
-
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <title>Protein Property Predictor - Models</title>
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
-      .b-example-divider {
-        height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
-        border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-      }
-
-      .b-example-vr {
-        flex-shrink: 0;
-        width: 1.5rem;
-        height: 100vh;
-      }
-
       .bi {
         vertical-align: -.125em;
         fill: currentColor;
@@ -62,151 +31,107 @@
         -webkit-overflow-scrolling: touch;
       }
     </style>
-
-
     <!-- Custom styles for this template -->
-    <link href="../assets/offcanvas-navbar.css" rel="stylesheet">
+    <link href="{% static 'css/offcanvas-navbar.css' %}" rel="stylesheet">
   </head>
   <body class="bg-light">
-
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="Main navigation">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Offcanvas navbar</a>
-    <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Notifications</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Switch account</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Settings</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="Main navigation">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Protein Property Predictor</a>
+        <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Search Engine</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'all_model' %}">Model Builder</a>
+            </li>
           </ul>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
-
-<div class="nav-scroller bg-body shadow-sm">
-  <nav class="nav" aria-label="Secondary navigation">
-    <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
-    <a class="nav-link" href="#">
-      Friends
-      <span class="badge text-bg-light rounded-pill align-text-bottom">27</span>
-    </a>
-    <a class="nav-link" href="#">Explore</a>
-    <a class="nav-link" href="#">Suggestions</a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link" href="#">Link</a>
-  </nav>
-</div>
-
-<main class="container">
-  <div class="my-3 p-3">
-      {% if messages %}
-          {% for message in messages %}
-              {% if message.tags == 'error' %}
-                  <div class="alert alert-danger d-flex align-items-center" role="alert">
-                      <div>
-                        {{ message }}
-                      </div>
-                  </div>
-                  {% elif message.tags == 'success' %}
-                  <div class="alert alert-success d-flex align-items-center" role="alert">
-                      <div>
-                        {{ message }}
-                      </div>
-                  </div>
-                  {% else %}
-                  <div class="alert alert-primary d-flex align-items-center" role="alert">
-                      <div>
-                        {{ message }}
-                      </div>
-                  </div>
-              {% endif %}
-
-
-          {% endfor %}
-      {% endif %}
-
-
-      <div class="row">
-          <div class="col-12">
-            <div class="p-3 bg-body rounded shadow-sm">
-            <div>
-                  <div class="float-start">
-                      <h2>Model Overview</h2>
-                  </div>
-                  <div class="float-end">
-                      <a href="/models/create" class="btn btn-primary"><i class="bi bi-plus"></i> Create</a>
-
-                  </div>
-              </div>
-                <table class="table table-hover">
-                <thead>
-                    <tr>
-                      <th scope="col">#</th>
-                      <th scope="col">Slug</th>
-                      <th scope="col">Model Type</th>
-                      <th scope="col">Prediction Type</th>
-                      <th scope="col">Version</th>
-                      <th scope="col">Timestamp</th>
-                      <th scope="col">Status</th>
-                        <th scope="col"></th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                  {% for model in models %}
-                  <tr>
-                      <th scope="row">{{ model.id }}</th>
-                      <td>{{ model.slug }}</td>
-                      <td>{{ model.model_type }}</td>
-                      <td>{{ model.prediction_type }}</td>
-                      <td>{{ model.version }}</td>
-                      <td>{{ model.created_at | date:'Y-m-d H:i'  }}</td>
-                      <td>{{ model.status }}</td>
-                      <td>
-                          <div class="btn-group" role="group" aria-label="Basic outlined example">
-                              <a href="/models/update/{{ model.slug }}" class="btn btn-outline-primary"><i class="bi bi-pencil"></i></a>
-                              <a href="/models/delete/{{ model.slug }}" class="btn btn-danger"><i class="bi bi-trash"></i></a>
-                            </div>
-                      </td>
-                    </tr>
-                  {% endfor %}
-                  </tbody>
-            </table>
-            </div>
-          </div>
+        </div>
       </div>
-  </div>
-</main>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
-      <script src="../assets/offcanvas-navbar.js"></script>
+    </nav>
+{#    <div class="nav-scroller bg-body shadow-sm">#}
+{#      <nav class="nav" aria-label="Secondary navigation">#}
+{#        <a class="nav-link active" aria-current="page" href="#">Dashboard</a>#}
+{#        <a class="nav-link" href="#"> Friends <span class="badge text-bg-light rounded-pill align-text-bottom">27</span>#}
+{#        </a>#}
+{#        <a class="nav-link" href="#">Explore</a>#}
+{#        <a class="nav-link" href="#">Suggestions</a>#}
+{#        <a class="nav-link" href="#">Link</a>#}
+{#        <a class="nav-link" href="#">Link</a>#}
+{#        <a class="nav-link" href="#">Link</a>#}
+{#        <a class="nav-link" href="#">Link</a>#}
+{#        <a class="nav-link" href="#">Link</a>#}
+{#      </nav>#}
+{#    </div>#}
+    <main class="container">
+        <div class="my-3">
+            {% if messages %}
+                {% for message in messages %}
+                    {% if message.tags == 'error' %}
+                        <div class="alert alert-danger d-flex align-items-center rounded shadow-sm">
+                            <i class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2"></i>
+                        {{ message }}
+                      </div>
+                    {% elif message.tags == 'success' %}
+                        <div class="alert alert-success d-flex align-items-center rounded shadow-sm">
+                        <i class="bi bi-check-circle-fill flex-shrink-0 me-2"></i>
+                        {{ message }}
+                      </div>
+                    {% else %}
+                        <div class="alert alert-primary d-flex align-items-center rounded shadow-sm">
+                        <i class="bi bi-info-circle-fill flex-shrink-0 me-2"></i>
+                        {{ message }}
+                      </div>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+        </div>
+        <div class="my-3 p-3 bg-body rounded shadow-sm">
+            <div class="d-flex justify-content-between border-bottom pb-2 mb-0 ">
+              <h3>Models</h3>
+              <a href="{% url 'create_model' %}" class="btn btn-primary">
+                <i class="bi bi-plus flex-shrink-0 me-2"></i> Create </a>
+            </div>
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Slug</th>
+                  <th>Model</th>
+                  <th>Property to Predict</th>
+                  <th>Version</th>
+                  <th>Timestamp</th>
+                  <th>Status</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody> {% for model in models %} <tr>
+                  <th scope="row">{{ model.id }}</th>
+                  <td>{{ model.slug }}</td>
+                  <td>{{ model.model_type }}</td>
+                  <td>{{ model.prediction_type }}</td>
+                  <td>{{ model.version }}</td>
+                  <td>{{ model.created_at | date:'Y-m-d H:i'  }}</td>
+                  <td>{{ model.status }}</td>
+                  <td>
+                    <div class="btn-group" role="group" aria-label="Basic outlined example">
+                      <a href="{% url 'update_model' slug=model.slug %}" class="btn btn-outline-primary">
+                        <i class="bi bi-pencil"></i>
+                      </a>
+                      <a href="{% url 'delete_model' slug=model.slug %}" class="btn btn-danger">
+                        <i class="bi bi-trash"></i>
+                      </a>
+                    </div>
+                  </td>
+                </tr> {% endfor %} </tbody>
+            </table>
+        </div>
+    </main>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/offcanvas-navbar.js' %}"></script>
   </body>
 </html>
