models added + changes

--- a/app/templates/manager/builder.html
+++ b/app/templates/manager/builder.html
@@ -102,17 +102,17 @@
 
                 <div class="row">
                     <div class="col-12 my-2">
-                        <label for="inputPassword5" class="form-label">What model do you want to use?</label>
+                        <label for="selected_model" class="form-label">What model do you want to use?</label>
                         {{ form.selected_model }}
                     </div>
 
                     <div class="col-12 my-2">
-                        <label for="inputPassword5" class="form-label">What do you want to predict?</label>
+                        <label for="selected_prediction_type" class="form-label">What do you want to predict?</label>
                         {{ form.selected_prediction_type }}
                     </div>
 
                     <div class="col-12 my-2">
-                        <label for="inputPassword5" class="form-label">Version (Optional)</label>
+                        <label for="version" class="form-label">Version (Optional)</label>
                         {{ form.version }}
                     </div>
 
