--- a/app/templates/manager/update.html
+++ b/app/templates/manager/update.html
@@ -4,43 +4,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.108.0">
-    <title>Offcanvas navbar template · Bootstrap v5.3</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"
+    <title>Protein Property Predictor - Models</title>
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-
     <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
-      .b-example-divider {
-        height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
-        border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-      }
-
-      .b-example-vr {
-        flex-shrink: 0;
-        width: 1.5rem;
-        height: 100vh;
-      }
-
       .bi {
         vertical-align: -.125em;
         fill: currentColor;
@@ -64,91 +31,90 @@
         -webkit-overflow-scrolling: touch;
       }
     </style>
-
-
     <!-- Custom styles for this template -->
-    <link href="{% static 'css/offcanvas-navbar.css' %}" type="text/css">
+    <link href="{% static 'css/offcanvas-navbar.css' %}" rel="stylesheet">
   </head>
   <body class="bg-light">
-
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="Main navigation">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Protein Property Prediction</a>
-    <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="/">Predict</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/models">Model Builder</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<main class="container">
-  <div class="my-3 p-3">
-    <div class="my-3">
-      {% if messages %}
-          {% for message in messages %}
-              {% if message.tags == 'error' %}
-                  <div class="alert alert-danger d-flex align-items-center" role="alert">
-                      <div>
-                        {{ message }}
-                      </div>
-                  </div>
-                  {% elif message.tags == 'success' %}
-                  <div class="alert alert-success d-flex align-items-center" role="alert">
-                      <div>
-                        {{ message }}
-                      </div>
-                  </div>
-                  {% else %}
-                  <div class="alert alert-primary d-flex align-items-center" role="alert">
-                      <div>
-                        {{ message }}
-                      </div>
-                  </div>
-              {% endif %}
-
-
-          {% endfor %}
-      {% endif %}
-    </div>
-
-        <div class="row g-5">
-      <div class="col-md-12">
-        <h2>Model Builder</h2>
-        <form method="POST" action="/models/create">
-            {% csrf_token %}
-          <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">What model do you want to use?</label>
-            {{ form.selected_model }}
-          </div>
-          <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">What do you want to predict?</label>
-            {{ form.selected_prediction_type }}
-          </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Version (Optional)</label>
-            {{ form.version }}
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="Main navigation">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Protein Property Predictor</a>
+        <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Search Engine</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'all_model' %}">Model Builder</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </div>
-</main>
+    </nav>
+{#    <div class="nav-scroller bg-body shadow-sm">#}
+{#      <nav class="nav" aria-label="Secondary navigation">#}
+{#        <a class="nav-link active" aria-current="page" href="#">Dashboard</a>#}
+{#        <a class="nav-link" href="#"> Friends <span class="badge text-bg-light rounded-pill align-text-bottom">27</span>#}
+{#        </a>#}
+{#        <a class="nav-link" href="#">Explore</a>#}
+{#        <a class="nav-link" href="#">Suggestions</a>#}
+{#        <a class="nav-link" href="#">Link</a>#}
+{#        <a class="nav-link" href="#">Link</a>#}
+{#        <a class="nav-link" href="#">Link</a>#}
+{#        <a class="nav-link" href="#">Link</a>#}
+{#        <a class="nav-link" href="#">Link</a>#}
+{#      </nav>#}
+{#    </div>#}
+    <main class="container">
+        <div class="my-3">
+            {% if messages %}
+                {% for message in messages %}
+                    {% if message.tags == 'error' %}
+                        <div class="alert alert-danger d-flex align-items-center rounded shadow-sm">
+                            <i class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2"></i>
+                        {{ message }}
+                      </div>
+                    {% elif message.tags == 'success' %}
+                        <div class="alert alert-success d-flex align-items-center rounded shadow-sm">
+                        <i class="bi bi-check-circle-fill flex-shrink-0 me-2"></i>
+                        {{ message }}
+                      </div>
+                    {% else %}
+                        <div class="alert alert-primary d-flex align-items-center rounded shadow-sm">
+                        <i class="bi bi-info-circle-fill flex-shrink-0 me-2"></i>
+                        {{ message }}
+                      </div>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+        </div>
+        <div class="my-3 p-3 bg-body rounded shadow-sm">
+            <div class="d-flex justify-content-between border-bottom pb-2 mb-0 ">
+              <h3>Model: {{ model.slug }}</h3>
+              <a href="{% url 'all_model' %}" class="btn btn-outline-primary">
+                <i class="bi bi-arrow-left-circle flex-shrink-0 me-2"></i> Back to Models</a>
+            </div>
 
+            <div class="row">
+                <div class="col-md-4 col-sm-12 my-2">
+                    <label for="model_field" class="form-label">What model is used?</label>
+                    {{ model_field }}
+                </div>
+                <div class="col-md-4 col-sm-12 my-2">
+                    <label for="prediction_field" class="form-label">What property is predicted?</label>
+                    {{ prediction_field }}
+                </div>
+                <div class="col-md-4 col-sm-12 my-2">
+                    <label for="version_field" class="form-label">What version of this model is used?</label>
+                    {{ version_field }}
+                </div>
+            </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/ dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-
-      <script src="{% static 'js/offcanvas-navbar.js' %}"></script>
+        </div>
+    </main>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/offcanvas-navbar.js' %}"></script>
   </body>
 </html>
