--- a/app/templates/manager/list.html
+++ b/app/templates/manager/list.html
@@ -44,7 +44,7 @@
         <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Search Engine</a>
+              <a class="nav-link" href="{% url 'make_prediction' %}">Search Engine</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'all_model' %}">Model Builder</a>
