--- a/app/templates/manager/list.html
+++ b/app/templates/manager/list.html
@@ -49,6 +49,9 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'all_model' %}">Model Builder</a>
             </li>
+              <li class="nav-item">
+              <a class="nav-link" href="{% url 'all_ensemble' %}">Ensembler</a>
+            </li>
           </ul>
         </div>
       </div>
