--- a/app/templates/ensembles/list.html
+++ b/app/templates/ensembles/list.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Protein Property Predictor - Models</title>
+    <title>Protein Property Predictor - Ensembles</title>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <style>
@@ -47,10 +47,10 @@
               <a class="nav-link" href="{% url 'make_prediction' %}">Search Engine</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'all_model' %}">Model Builder</a>
+              <a class="nav-link" href="{% url 'all_model' %}">Model Builder</a>
             </li>
               <li class="nav-item">
-              <a class="nav-link" href="{% url 'all_ensemble' %}">Ensembler</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'all_ensemble' %}">Ensembler</a>
             </li>
           </ul>
         </div>
@@ -73,57 +73,54 @@
     <main class="container">
         <div class="my-3">
             {% if messages %}
-            {% for message in messages %}
-                {% if message.tags == 'error' %}
-                    <div class="alert alert-danger d-flex align-items-center rounded shadow-sm">
-                        <i class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2"></i>
-                    {{ message }}
-                  </div>
-                {% elif message.tags == 'success' %}
-                    <div class="alert alert-success d-flex align-items-center rounded shadow-sm">
-                    <i class="bi bi-check-circle-fill flex-shrink-0 me-2"></i>
-                    {{ message }}
-                  </div>
-                {% else %}
-                    <div class="alert alert-primary d-flex align-items-center rounded shadow-sm">
-                    <i class="bi bi-info-circle-fill flex-shrink-0 me-2"></i>
-                    {{ message }}
-                  </div>
-                {% endif %}
-            {% endfor %}
-        {% endif %}
+                {% for message in messages %}
+                    {% if message.tags == 'error' %}
+                        <div class="alert alert-danger d-flex align-items-center rounded shadow-sm">
+                            <i class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2"></i>
+                        {{ message }}
+                      </div>
+                    {% elif message.tags == 'success' %}
+                        <div class="alert alert-success d-flex align-items-center rounded shadow-sm">
+                        <i class="bi bi-check-circle-fill flex-shrink-0 me-2"></i>
+                        {{ message }}
+                      </div>
+                    {% else %}
+                        <div class="alert alert-primary d-flex align-items-center rounded shadow-sm">
+                        <i class="bi bi-info-circle-fill flex-shrink-0 me-2"></i>
+                        {{ message }}
+                      </div>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
         </div>
         <div class="my-3 p-3 bg-body rounded shadow-sm">
             <div class="d-flex justify-content-between border-bottom pb-2 mb-0 ">
-              <h3>Build a Model</h3>
-              <a href="{% url 'all_model' %}" class="btn btn-outline-primary">
-                <i class="bi bi-arrow-left-circle flex-shrink-0 me-2"></i> Back to Models</a>
+              <h3>Ensemble Models</h3>
+              <a href="{% url 'create_ensemble' %}" class="btn btn-primary">
+                <i class="bi bi-plus flex-shrink-0 me-2"></i> Create </a>
             </div>
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Name</th>
+                  <th>Models</th>
+                    <th>Created At</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody> {% for model in models %} <tr>
+                  <th scope="row">{{ model.id }}</th>
+                  <td>{{ model.name }}</td>
+                  <td>{% for predictor in model.predictors.all %}
+                      {{ predictor }},
+                      {% endfor %}</td>
+                  <td>{{ model.created_at | date:'Y-m-d H:i'  }}</td>
+                  <td>
 
-            <form action="{% url 'create_model' %}" method="post">
-                {% csrf_token %}
-
-                <div class="row">
-                    <div class="col-12 my-2">
-                        <label for="selected_model" class="form-label">What model do you want to use?</label>
-                        {{ form.selected_model }}
-                    </div>
-
-                    <div class="col-12 my-2">
-                        <label for="selected_prediction_type" class="form-label">What do you want to predict?</label>
-                        {{ form.selected_prediction_type }}
-                    </div>
-
-                    <div class="col-12 my-2">
-                        <label for="version" class="form-label">Version (Optional)</label>
-                        {{ form.version }}
-                    </div>
-
-                    <div class="col-12 my-2">
-                        <button type="submit" class="btn btn-primary">Create Model</button>
-                    </div>
-                </div>
-            </form>
+                  </td>
+                </tr> {% endfor %} </tbody>
+            </table>
         </div>
     </main>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
