--- a/app/templates/manager/builder.html
+++ b/app/templates/manager/builder.html
@@ -44,7 +44,10 @@
         <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'make_prediction' %}">Search Engine</a>
+              <a class="nav-link" href="{% url 'make_prediction' %}">Individual Prediction</a>
+            </li>
+              <li class="nav-item">
+              <a class="nav-link" href="{% url 'predict_ensemble' %}">Ensemble Predict</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'all_model' %}">Model Builder</a>
