--- a/app/templates/prediction/ensemble.html
+++ b/app/templates/prediction/ensemble.html
@@ -44,7 +44,10 @@
         <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'make_prediction' %}">Search Engine</a>
+              <a class="nav-link" href="{% url 'make_prediction' %}">Individual Prediction</a>
+            </li>
+              <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'predict_ensemble' %}">Ensemble Predict</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'all_model' %}">Model Builder</a>
@@ -95,7 +98,7 @@
         </div>
         <div class="my-3 p-3 bg-body rounded shadow-sm">
             <div class="d-flex justify-content-between border-bottom pb-2 mb-0 ">
-              <h3>Predict Protein Property</h3>
+              <h3>Predict Protein Property for ensembled models</h3>
             </div>
 
             <form action="{% url 'predict_ensemble' %}" method="post">
