--- a/app/templates/ensembles/builder.html
+++ b/app/templates/ensembles/builder.html
@@ -111,7 +111,10 @@
                         <label for="version" class="form-label">Name</label>
                         {{ form.name }}
                     </div>
-
+                    <div class="col-12 my-2">
+                        <label for="ensemblestyle" class="form-label">Ensemble Style</label>
+                        {{ form.ensemblestyle}}
+                    </div>
                     <div class="col-12 my-2">
                         <label for="selected_model" class="form-label">What models should be used?</label>
                         {{ form.selected_models }}
